Feature/refacor naming convension (#31)
* rename param sortBy to sort_by

* rename sortDirection to sort_direction
